--- a/src/Radio.scss
+++ b/src/Radio.scss
@@ -22,7 +22,7 @@
 	    margin-bottom: 0;
 	    font-size: 14px;
 	    font-weight: 400;
-	    line-height: 1.42857143;
+	    line-height: 14px;
 	    text-align: center;
 	    white-space: nowrap;
 	    vertical-align: middle;
