--- a/src/Radio.scss
+++ b/src/Radio.scss
@@ -79,7 +79,17 @@
 	    	position: relative;
 		}
 		input{
-			display:none;
+			position: absolute;
+			left: 2px;
+			z-index: 3;
+			cursor: pointer;
+			opacity: 0;
+			top: 7px;
+			bottom: 0;
+			right: 0;
+			box-sizing: border-box;
+			padding: 0;
+			width: 100%;
 		}
 		&.is-checked{
 			.u-radio-button-label{
@@ -100,6 +110,7 @@
 }
 
 .u-radio {
+	position: relative;
 	line-height: 22px;
 	&.disabled .u-radio-label{
 		cursor: not-allowed;
@@ -107,8 +118,18 @@
 		color: rgba(0, 0, 0, 0.25);
 	}
 	input[type='radio']{
-		display: none;
-	    cursor: pointer;
+		position: absolute;
+		z-index: 3;
+		cursor: pointer;
+		opacity: 0;
+		top: 1px;
+		box-sizing: border-box;
+		padding: 0;
+		width: 100%;
+		height: 100%;
+	}
+	input[type='radio']:focus + .u-radio-label:before{
+    	border-color: rgb(30,136,229);
 	}
 	&.is-checked {
 		.u-radio-label:before{
@@ -179,11 +200,14 @@
 		    box-shadow: inset 0 0 0 10px $radio-success-bg;
 		    border-color:$radio-success-bg;
 		}
-	} 
+	}
 	.u-radio-label {
 	    color: $radio-success-bg;
 	    
 	}
+	input[type='radio']:focus + .u-radio-label:before{
+    	border-color: $radio-success-bg;
+	} 
 }
 // Modifier: `radio-warning`
 // -------------------------
@@ -201,6 +225,9 @@
 	    color: $radio-warning-bg;
 	    
 	}
+	input[type='radio']:focus + .u-radio-label:before{
+    	border-color: $radio-warning-bg;
+	} 
 }
 // Modifier: `radio-danger`
 // -------------------------
@@ -218,24 +245,11 @@
 	    color: $radio-danger-bg;
 	    
 	}
-}
-// Modifier: `radio-warning`
-// -------------------------
-
-.u-radio.u-radio-dark {
-	&.is-checked {
-		.u-radio-label:before{
-			-moz-box-shadow: inset 0 0 0 10px $radio-dark-bg;
-		    -webkit-box-shadow: inset 0 0 0 10px $radio-dark-bg;
-		    box-shadow: inset 0 0 0 10px $radio-dark-bg;
-		    border-color:$radio-dark-bg;
-		}
+	input[type='radio']:focus + .u-radio-label:before{
+    	border-color: $radio-danger-bg;
 	} 
-	.u-radio-label {
-	    color: $radio-dark-bg;
-	    
-	}
 }
+
 // Modifier: `radio-info`
 // -------------------------
 
@@ -252,4 +266,28 @@
 	    color: $radio-info-bg;
 	    
 	}
+	input[type='radio']:focus + .u-radio-label:before{
+    	border-color: $radio-info-bg;
+	} 
+}
+
+// Modifier: `radio-dark`
+// -------------------------
+
+.u-radio.u-radio-dark {
+	&.is-checked {
+		.u-radio-label:before{
+			-moz-box-shadow: inset 0 0 0 10px $radio-dark-bg;
+		    -webkit-box-shadow: inset 0 0 0 10px $radio-dark-bg;
+		    box-shadow: inset 0 0 0 10px $radio-dark-bg;
+		    border-color:$radio-dark-bg;
+		}
+	} 
+	.u-radio-label {
+	    color: $radio-dark-bg;
+	    
+	}
+	input[type='radio']:focus + .u-radio-label:before{
+    	border-color: $radio-dark-bg;
+	} 
 }
