--- a/src/Radio.scss
+++ b/src/Radio.scss
@@ -129,7 +129,7 @@
 		height: 100%;
 	}
 	input[type='radio']:focus + .u-radio-label:before{
-    	border-color: rgb(30,136,229);
+    	border-color: $radio-checked-color;
 	}
 	&.is-checked {
 		.u-radio-label:before{
