--- a/src/Radio.scss
+++ b/src/Radio.scss
@@ -24,9 +24,9 @@ $radio-icon-checked-height: 6px;
     	display: inline-block;
 	    padding: 6px 12px;
 	    margin-bottom: 0;
-	    font-size: 14px;
+	    font-size: 12px;
 	    font-weight: 400;
-	    line-height: 14px;
+	    line-height: 12px;
 	    text-align: center;
 	    white-space: nowrap;
 	    vertical-align: middle;
@@ -40,9 +40,9 @@ $radio-icon-checked-height: 6px;
 	    background-image: none;
 	    border: 1px solid transparent;
 	    border-radius: $border-radius-base;
-	    color: #333;
+	    color: $font-color-base;
 	    background-color: #fff;
-	    border-color: #ccc;
+	    border-color: $border-color-base;
 		&:first-child {
 		    margin-left: 0;
 		    border-radius: $border-radius-base 0 0 $border-radius-base;
@@ -64,7 +64,7 @@ $radio-icon-checked-height: 6px;
 	    }
 	  
 		&:hover,&:focus{
-			color: $radio-checked-color;
+			// color: $radio-checked-color;
 	    	position: relative;
 		}
 		input{
@@ -83,17 +83,18 @@ $radio-icon-checked-height: 6px;
 		&.is-checked{
 			border-color: $radio-checked-color;
 			.u-radio-button-label{
-				color: $radio-checked-color;
+				color: #fff;
 			}
 			&.disabled,&.disabled:hover{
-				border-color: #DFE1E6;
-				background-color:#e6e6e6;
+				border-color: #c1c7d0;
+				background-color:#c1c7d0;
 			}
 			&.disabled .u-radio-button-label{
 				color: #fff;
 			}
 		}
 		&.disabled {
+			z-index: -1;
 	    	border-color: #DFE1E6;
 		    background-color: #F7F9FB;
 		    cursor: not-allowed;
@@ -106,13 +107,18 @@ $radio-icon-checked-height: 6px;
 				background-color: #F7F9FB;
 				color: #909090;
 				box-shadow: none;
+				cursor: not-allowed;
 			}
 	    }
 		&:hover, &:focus, &.focus, &:active, &.active, &.is-checked {
-		    color: $radio-checked-color;
-		    background-color: #fff;
+		    // color: $radio-checked-color;
+		    background: $hover-bg-color-base;
 		    // border-color: $radio-checked-color;
 		    z-index: 2;
+		}
+		&:active, &.active, &.is-checked{
+			background: $radio-checked-color;
+			color: #fff;
 		}
 	}
 }
@@ -185,7 +191,7 @@ $radio-icon-checked-height: 6px;
 		}
 	}
 	.u-radio-label {
-		font-size: 14px;
+		font-size: 12px;
 		cursor: pointer;
 	    display: inline-block;
 	    position: relative;
