--- a/src/Radio.scss
+++ b/src/Radio.scss
@@ -42,13 +42,15 @@ $radio-icon-checked-height: 6px;
 	    border-radius: $border-radius-base;
 	    color: $font-color-base;
 	    background-color: #fff;
-	    border-color: $border-color-base;
+		border-color: $border-color-base;
+		border-right: 0;
 		&:first-child {
 		    margin-left: 0;
 		    border-radius: $border-radius-base 0 0 $border-radius-base;
 		}
 		&:last-child{
-    	border-radius: 0 $border-radius-base $border-radius-base 0;
+			border-radius: 0 $border-radius-base $border-radius-base 0;
+			border-right: 1px solid $border-color-base;
 	    }
 	    &.u-radio-button-lg {
 		    height: $radio-button-lg-height;
@@ -94,8 +96,7 @@ $radio-icon-checked-height: 6px;
 			}
 		}
 		&.disabled {
-			z-index: -1;
-	    	border-color: #DFE1E6;
+			border-color: #DFE1E6;
 		    background-color: #F7F9FB;
 		    cursor: not-allowed;
 		    color: #909090;
@@ -113,7 +114,6 @@ $radio-icon-checked-height: 6px;
 		&:hover, &:active, &.active, &.is-checked {
 		    // color: $radio-checked-color;
 		    background: $hover-bg-color-base;
-		    // border-color: $radio-checked-color;
 		    z-index: 2;
 		}
 		&:focus, &.focus, &:active, &.active, &.is-checked{
@@ -123,9 +123,9 @@ $radio-icon-checked-height: 6px;
 	}
 }
 
-.u-radio-group .u-radio-button+.u-radio-button, .u-radio-group .u-radio-button+.u-radio-group, .u-radio-group .u-radio-group+.u-radio-button, .u-radio-group .u-radio-group+.u-radio-group {
-    margin-left: -1px;
-}
+// .u-radio-group .u-radio-button+.u-radio-button, .u-radio-group .u-radio-button+.u-radio-group, .u-radio-group .u-radio-group+.u-radio-button, .u-radio-group .u-radio-group+.u-radio-group {
+//     margin-left: -1px;
+// }
 
 .u-radio {
 	position: relative;
